--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+set-option -g default-shell /bin/zsh
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind R source-file ~/.config/tmux/tmux.conf
@@ -39,14 +40,19 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 	unbind '"'
 	unbind %
 
+bind -n M-d neww "~/.config/bin/tx" # session selector
+bind  C-f neww "~/.config/bin/cf"
+bind -n M-n command-prompt -I "" "new-session -s '%%'"
+bind -n M-q detach
+
 # TPM
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin "janoamaral/tokyo-night-tmux#legacy"
-set -g @plugin "nordtheme/tmux"
-
-### THEME
+# set -g @plugin "nordtheme/tmux"
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'hoshiya4522/tmux-simple-nord'
 
 
 
