--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ bind R source-file ~/.config/tmux/tmux.conf
 # Enable mouse mode 
 set -g mouse on
 
+
 # don't rename windows automatically
 set-option -g allow-rename off
 bind r command-prompt -I "#W" "rename-window '%%'"
@@ -39,6 +40,13 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 	bind v split-window -h -c '#{pane_current_path}'
 	unbind '"'
 	unbind %
+
+
+	# Vim selection mode and copy
+	bind-key -T copy-mode-vi v send-keys -X begin-selection
+	bind-key -T copy-mode-vi y send-keys -X copy-selection
+	bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 
 bind -n M-d neww "~/.config/bin/tx" # session selector
 bind  C-f neww "~/.config/bin/cf"
