--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,10 +48,13 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 	bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 
-bind -n M-d neww "~/.config/bin/tx" # session selector
-bind  C-f neww "~/.config/bin/cf"
-bind -n M-n command-prompt -I "" "new-session -s '%%'"
+bind -n M-d neww "~/.config/bin/tx" -n 'session-selector' # session selector
+bind  C-f neww "~/.config/bin/cf" -n 'config'
+
+bind -n M-n command-prompt -I "" "new-session -s '%%' -c ~"
+bind c command-prompt -I "" "new-window -n '%%'"
 bind -n M-q detach
+bind -n M-x kill-pane
 
 # TPM
 # List of plugins
