7b2510360c7d8c1ceb98e2adaa0ae28a

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
+set-option -g prefix M-a
 bind-key C-a send-prefix
 
 set-option -g default-shell /bin/zsh
@@ -48,7 +48,7 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 	bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 
-bind -n M-d neww "~/.config/bin/tx" -n 'session-selector' # session selector
+bind -n M-d neww "~/.config/bin/tx"
 bind  C-f neww "~/.config/bin/cf" -n 'config'
 
 bind -n M-n command-prompt -I "" "new-session -s '%%' -c ~"
