df6adba47197a3609c25527304af997a

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,7 +49,7 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 
 
 bind -n M-d neww "~/.config/bin/tx"
-bind  C-f neww "~/.config/bin/cf" -n 'config'
+bind -n M-f neww "~/.config/bin/cf" -n 'config'
 
 bind -n M-n command-prompt -I "" "new-session -s '%%' -c ~"
 bind c command-prompt -I "" "new-window -n '%%'"
