--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,6 +56,13 @@ bind c command-prompt -I "" "new-window -n '%%'"
 bind -n M-q detach
 bind -n M-x kill-pane
 
+set -g status-style bg=color8
+set -g status-right ""
+set -g status-position bottom
+
+set-window-option -g window-status-current-style fg=color2
+set-window-option -g window-status-current-style bg=color3
+
 # TPM
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -63,7 +70,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin "janoamaral/tokyo-night-tmux#legacy"
 # set -g @plugin "nordtheme/tmux"
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'hoshiya4522/tmux-simple-nord'
+# set -g @plugin 'hoshiya4522/tmux-simple-nord'
 
 
 
