--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,8 +60,7 @@ set -g status-style bg=color8
 set -g status-right ""
 set -g status-position bottom
 
-set-window-option -g window-status-current-style fg=color2
-set-window-option -g window-status-current-style bg=color3
+set-window-option -g window-status-current-style bg=#9c64fe
 
 # TPM
 # List of plugins
