01145c82b01e2e8cac8939da8dbcfcd4

--- a/kde.org/UserFeedback.org.kde.plasmashell.conf
+++ b/kde.org/UserFeedback.org.kde.plasmashell.conf
@@ -26,6 +26,6 @@ dataSourceCommonSettings\activeState=true
 dataSourceCommonSettings\activeState=true
 
 [UserFeedback]
-ApplicationStartCount=7
-ApplicationTime=26391
+ApplicationStartCount=11
+ApplicationTime=35419
 LastEncouragement=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x8a/\x1\x36\xb4n\0)
