7ef3443cb9f72b0ab3e51d4a4bd8337e

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,7 +52,7 @@ bind -n M-d neww "~/.config/bin/tx"
 bind -n M-f neww "~/.config/bin/cf" -n 'config'
 
 bind -n M-n command-prompt -I "" "new-session -s '%%' -c ~"
-bind c command-prompt -I "" "new-window -n '%%'"
+bind -n M-c command-prompt -I "" "new-window -n '%%'"
 bind -n M-q detach
 bind -n M-x kill-pane
 
