--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,19 @@
 include ./theme.conf
 
 background_opacity 0.89
-font_size 14.0
 confirm_os_window_close 0
+
+font_size 14.0
+font_family      FiraCode Nerd Font
+bold_font        FiraCode Nerd Font Bold
+
+# Operator Mono Book
+# italic_font      Operator Mono Book Italic)
+# bold_italic_font Operator Mono Medium Italic
+# 
+# Light
+# FiraCode Nerd Font Med)
+# FiraCode Nerd Font Reg)
+# FiraCode Nerd Font Ret)
+# FiraCode Nerd Font SemBd
 
