--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,10 +5,9 @@ confirm_os_window_close 0
 
 font_size 14.0
 font_family      FiraCode Nerd Font
-bold_font        FiraCode Nerd Font Bold
+ italic_font     MesloLGS NF Italic
 
 # Operator Mono Book
-# italic_font      Operator Mono Book Italic)
 # bold_italic_font Operator Mono Medium Italic
 # 
 # Light
