2cc3ce7df0b87c956567169d00a22bd3

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,6 +43,7 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 
 
 	# Vim selection mode and copy
+	# bind -n M-[ select-pane -L 
 	bind-key -T copy-mode-vi v send-keys -X begin-selection
 	bind-key -T copy-mode-vi y send-keys -X copy-selection
 	bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
