--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,22 +18,22 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 
 ####### VIM ############
 	setw -g mode-keys vi
-
+             
 	# switch panes using vim keybindings
-	bind -n M-h select-pane -L 
-	bind -n M-j select-pane -D 
-	bind -n M-k select-pane -U
-	bind -n M-l select-pane -R
+	bind h select-pane -L 
+	bind j select-pane -D 
+	bind k select-pane -U
+	bind l select-pane -R
 
 	#Switch window
-	bind -n M-L next-window
-	bind -n M-H previous-window
+	bind -n M-, prev
+	bind -n M-. next
 
 	# resize panes more easily
-	bind -n M-< resize-pane -L 5
-	bind -n M-> resize-pane -R 5
-	bind -n M-, resize-pane -D 5
-	bind -n M-. resize-pane -U 5
+	bind < resize-pane -L 5
+	bind > resize-pane -R 5
+	bind , resize-pane -D 5
+	bind . resize-pane -U 5
 
 	# vim like split
 	bind s split-window -v -c '#{pane_current_path}'
@@ -43,19 +43,19 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 
 
 	# Vim selection mode and copy
-	# bind -n M-[ select-pane -L 
+	# bind [ select-pane -L 
 	bind-key -T copy-mode-vi v send-keys -X begin-selection
 	bind-key -T copy-mode-vi y send-keys -X copy-selection
 	bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 
-bind -n M-d neww "~/.config/bin/tx"
-bind -n M-f neww "~/.config/bin/cf" -n 'config'
+bind d neww "~/.config/bin/tx"
+bind f neww "~/.config/bin/cf" -n 'config'
 
-bind -n M-n command-prompt -I "" "new-session -s '%%' -c ~"
-bind -n M-c command-prompt -I "" "new-window -n '%%'"
-bind -n M-q detach
-bind -n M-x kill-pane
+bind n command-prompt -I "" "new-session -s '%%' -c ~"
+bind c command-prompt -I "" "new-window -n '%%'"
+bind q detach
+bind x kill-pane
 
 set -g status-style bg=color8
 set -g status-right ""
@@ -65,15 +65,15 @@ set-window-option -g window-status-current-style bg=#9c64fe
 
 # TPM
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin "janoamaral/tokyo-night-tmux#legacy"
 # set -g @plugin "nordtheme/tmux"
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin 'hoshiya4522/tmux-simple-nord'
 
 
 
 
 
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
