--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -5,7 +5,7 @@ gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
-gtk-font-name=Noto Sans,  12
+gtk-font-name=FiraCode Nerd Font,  12
 gtk-icon-theme-name=breeze-dark
 gtk-menu-images=true
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
