--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,7 +53,10 @@ bind d neww "~/.config/bin/tx"
 bind f neww "~/.config/bin/cf" -n 'config'
 
 bind n command-prompt -I "" "new-session -s '%%' -c ~"
-bind c command-prompt -I "" "new-window -n '%%'"
+bind c command-prompt -I "" "new-window -n '%%' -c '#{pane_current_path}'"
+bind C new-window -c '#{pane_current_path}'
+bind N new-session
+
 bind q detach
 bind x kill-pane
 
