--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -5,8 +5,13 @@
 
 UP          add volume  2       # ignore keybinds for
 DOWN        add volume -2      # directional keys
-LEFT        seek -10        
-RIGHT       seek 10      
+LEFT        seek -4        
+RIGHT       seek 4      
+
+KP8 add volume  2       # ignore keybinds for
+KP2 add volume -2      # directional keys
+KP4 seek -4        
+KP6 seek 4      
         
 SPACE       cycle pause                 # toggle pause
 ENTER       cycle pause                 # toggle pause
