e80be12a-7649-45e9-af25-7d75bee28813

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -5,13 +5,13 @@
 
 UP          add volume  2       # ignore keybinds for
 DOWN        add volume -2      # directional keys
-LEFT        seek -4        
-RIGHT       seek 4      
+LEFT        seek -4; show_progress                      
+RIGHT       seek 4; show_progress                      
 
-KP8 add volume  2       # ignore keybinds for
-KP2 add volume -2      # directional keys
-KP4 seek -4        
-KP6 seek 4      
+KP8         add volume  2       # ignore keybinds for
+KP2         add volume -2      # directional keys
+KP4         seek -4; show_progress                      
+KP6         seek 4; show_progress               
         
 SPACE       cycle pause                 # toggle pause
 ENTER       cycle pause                 # toggle pause
