--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,5 +1,6 @@
 sub-auto=fuzzy
 
 ytdl-raw-options=sub-lang="en",write-sub=,write-auto-sub=
+ytdl-format=bestvideo[height<=?1080]+bestaudio/best
 
 sub-font='Noto Color Emoji'
