bcfe5ab1-db88-4a61-a4e3-dc4a84792611

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,9 @@ bind-key C-a send-prefix
 
 set-option -g default-shell /bin/zsh
 
+set-option -s set-clipboard on
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind R source-file ~/.config/tmux/tmux.conf
 
