6ff180ee-d99d-459b-9724-dbd0e79a27ec

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -80,3 +80,6 @@ t           show_progress               # show video progress bar
 v           cycle sub                   # cycle through subs
 b           cycle audio                 # cycle through audio streams
 m           cycle mute                  # toggle mute
+
+n next
+p previous
