--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -81,5 +81,7 @@ v           cycle sub                   # cycle through subs
 b           cycle audio                 # cycle through audio streams
 m           cycle mute                  # toggle mute
 
-n next
-p previous
+n           playlist-next
+p           playlist-prev
+SHIFT+N     add chapter 1 
+SHIFT+P     add chapter -1 
