--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,8 @@ bind R source-file ~/.config/tmux/tmux.conf
 # Enable mouse mode 
 set -g mouse on
 
+set -g history-limit 10000
+
 
 # don't rename windows automatically
 set-option -g allow-rename off
