--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,8 @@ set -g mouse on
 
 set -g history-limit 10000
 
+set-option -g set-titles on
+# set-option -g set-titles-string "#S / #W
 
 # don't rename windows automatically
 set-option -g allow-rename off
