3e0c57fa-5e2e-4b49-a1fa-1bc4000e1266

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g mouse on
 set -g history-limit 10000
 
 set-option -g set-titles on
-# set-option -g set-titles-string "#S / #W
+set-option -g set-titles-string "#W"
 
 # don't rename windows automatically
 set-option -g allow-rename off
