--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,23 +67,11 @@ bind N new-session
 bind q detach
 bind x kill-pane
 
-set -g status-style bg=color8
+set -g status-style bg=default
+
+# set -g status-style bg=color8
 set -g status-right ""
 set -g status-position bottom
-
-set-window-option -g window-status-current-style bg=#9c64fe
-
-# TPM
-# List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin "janoamaral/tokyo-night-tmux#legacy"
-# set -g @plugin "nordtheme/tmux"
-# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# set -g @plugin 'hoshiya4522/tmux-simple-nord'
-
-
-
-
-
-# run '~/.tmux/plugins/tpm/tpm'
+#
+# set-window-option -g window-status-current-style bg=#9c64fe
+set -g status-left-length 90
