--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,9 +69,9 @@ bind x kill-pane
 
 set -g status-style bg=default
 
-# set -g status-style bg=color8
 set -g status-right ""
 set -g status-position bottom
-#
-# set-window-option -g window-status-current-style bg=#9c64fe
+
+set-window-option -g window-status-current-style fg=#9c64fe
+set-window-option -g status-left-style fg=#c4265e
 set -g status-left-length 90
