--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -85,3 +85,5 @@ n           playlist-next
 p           playlist-prev
 SHIFT+N     add chapter 1 
 SHIFT+P     add chapter -1 
+
+d vf toggle negate,colorbalance=rh=-0.3:gh=-0.3:bh=-0.3
