--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -4,3 +4,5 @@ ytdl-raw-options=sub-lang="en",write-sub=,write-auto-sub=
 ytdl-format=bestvideo[height<=?1080]+bestaudio/best
 
 sub-font='Noto Color Emoji'
+
+save-position-on-quit
