e9b8e91f-2f25-4393-9450-fb93df57e2fa

--- a/kde.org/UserFeedback.org.kde.kate.conf
+++ b/kde.org/UserFeedback.org.kde.kate.conf
@@ -17,5 +17,5 @@ dataSourceCommonSettings\activeState=true
 dataSourceCommonSettings\activeState=true
 
 [UserFeedback]
-ApplicationStartCount=9
-ApplicationTime=124
+ApplicationStartCount=10
+ApplicationTime=125
