--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -8,6 +8,10 @@
             {
                 "language": ["markdown", "rmd" , "vimwiki"],
                 "path": "../snippets/markdown.json"
+            },
+            {
+                "language": ["vimwiki" ],
+                "path": "../snippets/vimwiki.json"
             }
         ]
     }
