--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 set-option -g prefix M-a
 bind-key C-a send-prefix
 
-set-option -g default-shell /bin/zsh
+set-option -g default-shell ~/.nix-profile/bin/zsh
 
 set-option -s set-clipboard on
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
@@ -14,7 +14,7 @@ bind R source-file ~/.config/tmux/tmux.conf
 # Enable mouse mode 
 set -g mouse on
 
-set -g history-limit 10000
+set -g history-limit 70000
 
 set-option -g set-titles on
 set-option -g set-titles-string "#W"
