--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 # cp ~/.config/alacritty/alacritty.toml /mnt/c/Users/khars/AppData/Roaming/alacritty
 [shell]
 program = "wsl.exe"
-# args = [ "~/.nix-profile/bin/zsh", "-c ", "~/.config/bin/tx" ]
+# args = [ "~/.nix-profile/bin/zsh", "-c ", "cd ~ && ~/.config/bin/tx" ]
 
 
 [window]
