b0718c43-5625-499e-9dd8-a9b2fa49ae4c

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,7 +58,7 @@ bind r command-prompt -I "#W" "rename-window '%%'"
 
 bind d neww "~/.config/bin/tx"
 bind f neww "~/.config/bin/cf" -n 'config'
-bind ; command-prompt -I "" "neww '%%' -c ~"
+bind ; command-prompt -I "" "new-session -s '%%' -c ~"
 
 bind n command-prompt -I "" "new-session -s '%%' -c ~"
 bind c command-prompt -I "" "new-window -n '%%' -c '#{pane_current_path}'"
