--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,6 +23,8 @@ set-option -g set-titles-string "#W"
 set-option -g allow-rename off
 bind r command-prompt -I "#W" "rename-window '%%'"
 
+bind ';' command-prompt -I "" "neww '%%'"
+
 ####### VIM ############
 	setw -g mode-keys vi
              
