885c4abd-cfc1-4ab5-ac76-218fe8c815f8

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,8 @@ set-option -g set-titles-string "#W"
 set-option -g allow-rename off
 bind r command-prompt -I "#W" "rename-window '%%'"
 
-bind ';' command-prompt -I "task add " "neww '%%' "
+bind a command-prompt -I "task add " "neww '%%' "
+bind ';' command-prompt -I "" "neww '%%' "
 
 ####### VIM ############
 	setw -g mode-keys vi
