--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -77,4 +77,7 @@ set -g status-position bottom
 
 set-window-option -g window-status-current-style fg=#9c64fe
 set-window-option -g status-left-style fg=#c4265e
+set-window-option -g status-right-style fg=#c4265e
+set-window-option -g status-right ~/.config/bin/most-imp-task-desc
 set -g status-left-length 90
+set -g status-right-length 100
