ad235240-a4d8-4ef7-87cc-84be05ac17fc

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,6 +79,6 @@ set-window-option -g window-status-current-style fg=#9c64fe
 set-window-option -g status-left-style fg=#c4265e
 set-window-option -g status-right-style fg=#c4265e
 set-window-option -g status-interval 60 
-set -g status-right '#(~/.config/bin/most-imp-task-desc)'
+set -g status-right '#(go run ~/.config/go-sys-scipts/active-taskwarrior-tasks.go)'
 set -g status-left-length 90
 set -g status-right-length 100
