--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -75,10 +75,10 @@ set -g status-style bg=default
 set -g status-right ""
 set -g status-position bottom
 
-set-window-option -g window-status-current-style fg=#9c64fe
-set-window-option -g status-left-style fg=#c4265e
-set-window-option -g status-right-style fg=#c4265e
+set-window-option -g window-status-current-style fg=blue
+set-window-option -g status-left-style fg=red
+set-window-option -g status-right-style fg=red
 set-window-option -g status-interval 20 
-set -g status-right '#(go run ~/.config/go-sys-scipts/active-taskwarrior-tasks.go)'
+set -g status-right '#[fg=blue,bg=default,bright]#(go run ~/.config/go-sys-scipts/active-taskwarrior-tasks.go) #[fg=cyan,bg=default,bright]#(go run ~/.config/go-sys-scipts/age.go)'
 set -g status-left-length 90
 set -g status-right-length 100
