--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 set-option -g prefix M-a
 bind-key C-a send-prefix
 
-set-option -g default-shell ~/.nix-profile/bin/zsh
+set-option -g default-shell "~/.nix-profile/bin/zsh -l"
 
 set-option -s set-clipboard on
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
