--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,7 @@ set-option -g set-titles-string "#W"
 set-option -g allow-rename off
 bind r command-prompt -I "#W" "rename-window '%%'"
 
-bind a command-prompt -I "task add " "neww '%%' "
+bind a command-prompt -I "task add +" "neww '%%' "
 bind A run "task +ACTIVE stop || go run ~/.config/go-sys-scipts/taskwarrior-start.go"
 bind ';' command-prompt -I "" "neww '%%' "
 
