910f59fa-d510-4bb0-aa79-3f2d4486570e

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,247 @@
 # cp ~/.config/alacritty/alacritty.toml /mnt/c/Users/khars/AppData/Roaming/alacritty
+
+import = [
+
+# "~/.nix-profile/Cobalt2.toml"
+# "~/.nix-profile/Mariana.toml"
+# "~/.nix-profile/afterglow.toml"
+# "~/.nix-profile/alabaster.toml"
+# "~/.nix-profile/alabaster_dark.toml"
+# "~/.nix-profile/alacritty_0_12.toml"
+# "~/.nix-profile/argonaut.toml"
+# "~/.nix-profile/ashes_dark.toml"
+# "~/.nix-profile/ashes_light.toml"
+# "~/.nix-profile/atom_one_light.toml"
+# "~/.nix-profile/aura.toml"
+# "~/.nix-profile/ayu_dark.toml"
+# "~/.nix-profile/ayu_light.toml"
+# "~/.nix-profile/baitong.toml"
+# "~/.nix-profile/base16_default_dark.toml"
+  "~/.nix-profile/blood_moon.toml"
+# "~/.nix-profile/bluish.toml"
+# "~/.nix-profile/breeze.toml"
+# "~/.nix-profile/campbell.toml"
+# "~/.nix-profile/carbonfox.toml"
+# "~/.nix-profile/catppuccin.toml"
+# "~/.nix-profile/catppuccin_frappe.toml"
+# "~/.nix-profile/catppuccin_latte.toml"
+# "~/.nix-profile/catppuccin_macchiato.toml"
+# "~/.nix-profile/catppuccin_mocha.toml"
+# "~/.nix-profile/challenger_deep.toml"
+# "~/.nix-profile/citylights.toml"
+# "~/.nix-profile/cyber_punk_neon.toml"
+# "~/.nix-profile/darcula.toml"
+# "~/.nix-profile/dark_pastels.toml"
+# "~/.nix-profile/deep_space.toml"
+# "~/.nix-profile/doom_one.toml"
+# "~/.nix-profile/dracula.toml"
+# "~/.nix-profile/everforest_dark.toml"
+# "~/.nix-profile/everforest_light.toml"
+# "~/.nix-profile/falcon.toml"
+# "~/.nix-profile/flat_remix.toml"
+# "~/.nix-profile/flexoki.toml"
+# "~/.nix-profile/github_dark.toml"
+# "~/.nix-profile/github_dark_colorblind.toml"
+# "~/.nix-profile/github_dark_default.toml"
+# "~/.nix-profile/github_dark_dimmed.toml"
+# "~/.nix-profile/github_dark_high_contrast.toml"
+# "~/.nix-profile/github_dark_tritanopia.toml"
+# "~/.nix-profile/github_light.toml"
+# "~/.nix-profile/github_light_colorblind.toml"
+# "~/.nix-profile/github_light_default.toml"
+# "~/.nix-profile/github_light_high_contrast.toml"
+# "~/.nix-profile/github_light_tritanopia.toml"
+# "~/.nix-profile/gnome_terminal.toml"
+# "~/.nix-profile/google.toml"
+# "~/.nix-profile/gotham.toml"
+# "~/.nix-profile/gruvbox_dark.toml"
+# "~/.nix-profile/gruvbox_light.toml"
+# "~/.nix-profile/gruvbox_material.toml"
+# "~/.nix-profile/gruvbox_material_hard_dark.toml"
+# "~/.nix-profile/gruvbox_material_hard_light.toml"
+# "~/.nix-profile/gruvbox_material_medium_dark.toml"
+# "~/.nix-profile/gruvbox_material_medium_light.toml"
+# "~/.nix-profile/hardhacker.toml"
+# "~/.nix-profile/high_contrast.toml"
+# "~/.nix-profile/horizon-dark.toml"
+# "~/.nix-profile/hyper.toml"
+# "~/.nix-profile/inferno.toml"
+# "~/.nix-profile/iris.toml"
+# "~/.nix-profile/iterm.toml"
+# "~/.nix-profile/kanagawa_dragon.toml"
+# "~/.nix-profile/kanagawa_wave.toml"
+# "~/.nix-profile/konsole_linux.toml"
+# "~/.nix-profile/low_contrast.toml"
+# "~/.nix-profile/marine_dark.toml"
+# "~/.nix-profile/material_theme.toml"
+# "~/.nix-profile/material_theme_mod.toml"
+# "~/.nix-profile/meliora.toml"
+# "~/.nix-profile/midnight-haze.toml"
+# "~/.nix-profile/monokai_charcoal.toml"
+# "~/.nix-profile/monokai_pro.toml"
+# "~/.nix-profile/moonlight_ii_vscode.toml"
+# "~/.nix-profile/msx.toml"
+# "~/.nix-profile/night_owlish_light.toml"
+# "~/.nix-profile/nightfox.toml"
+# "~/.nix-profile/noctis-lux.toml"
+# "~/.nix-profile/nord.toml"
+# "~/.nix-profile/nord_light.toml"
+# "~/.nix-profile/nordic.toml"
+# "~/.nix-profile/oceanic_next.toml"
+# "~/.nix-profile/omni.toml"
+# "~/.nix-profile/one_dark.toml"
+# "~/.nix-profile/palenight.toml"
+# "~/.nix-profile/papercolor_dark.toml"
+# "~/.nix-profile/papercolor_light.toml"
+# "~/.nix-profile/papertheme.toml"
+# "~/.nix-profile/pastel_dark.toml"
+# "~/.nix-profile/pencil_dark.toml"
+# "~/.nix-profile/pencil_light.toml"
+# "~/.nix-profile/rainbow.toml"
+# "~/.nix-profile/remedy_dark.toml"
+# "~/.nix-profile/rose-pine-dawn.toml"
+# "~/.nix-profile/rose-pine-moon.toml"
+# "~/.nix-profile/rose-pine.toml"
+# "~/.nix-profile/seashells.toml"
+# "~/.nix-profile/smoooooth.toml"
+# "~/.nix-profile/snazzy.toml"
+# "~/.nix-profile/solarized_dark.toml"
+# "~/.nix-profile/solarized_light.toml"
+# "~/.nix-profile/solarized_osaka.toml"
+# "~/.nix-profile/taerminal.toml"
+# "~/.nix-profile/tango_dark.toml"
+# "~/.nix-profile/tender.toml"
+# "~/.nix-profile/terminal_app.toml"
+# "~/.nix-profile/thelovelace.toml"
+# "~/.nix-profile/tokyo-night-storm.toml"
+# "~/.nix-profile/tokyo-night.toml"
+# "~/.nix-profile/tomorrow_night.toml"
+# "~/.nix-profile/tomorrow_night_bright.toml"
+# "~/.nix-profile/ubuntu.toml"
+# "~/.nix-profile/wombat.toml"
+# "~/.nix-profile/xterm.toml"
+# "~/.nix-profile/zenburn.toml"
+# "~/.nix-profile/Cobalt2.toml"
+# "~/.nix-profile/Mariana.toml"
+# "~/.nix-profile/afterglow.toml"
+# "~/.nix-profile/alabaster.toml"
+# "~/.nix-profile/alabaster_dark.toml"
+# "~/.nix-profile/alacritty_0_12.toml"
+# "~/.nix-profile/argonaut.toml"
+# "~/.nix-profile/ashes_dark.toml"
+# "~/.nix-profile/ashes_light.toml"
+# "~/.nix-profile/atom_one_light.toml"
+# "~/.nix-profile/aura.toml"
+# "~/.nix-profile/ayu_dark.toml"
+# "~/.nix-profile/ayu_light.toml"
+# "~/.nix-profile/baitong.toml"
+# "~/.nix-profile/base16_default_dark.toml"
+# "~/.nix-profile/blood_moon.toml"
+# "~/.nix-profile/bluish.toml"
+# "~/.nix-profile/breeze.toml"
+# "~/.nix-profile/campbell.toml"
+# "~/.nix-profile/carbonfox.toml"
+# "~/.nix-profile/catppuccin.toml"
+# "~/.nix-profile/catppuccin_frappe.toml"
+# "~/.nix-profile/catppuccin_latte.toml"
+# "~/.nix-profile/catppuccin_macchiato.toml"
+# "~/.nix-profile/catppuccin_mocha.toml"
+# "~/.nix-profile/challenger_deep.toml"
+# "~/.nix-profile/citylights.toml"
+# "~/.nix-profile/cyber_punk_neon.toml"
+# "~/.nix-profile/darcula.toml"
+# "~/.nix-profile/dark_pastels.toml"
+# "~/.nix-profile/deep_space.toml"
+# "~/.nix-profile/doom_one.toml"
+# "~/.nix-profile/dracula.toml"
+# "~/.nix-profile/everforest_dark.toml"
+# "~/.nix-profile/everforest_light.toml"
+# "~/.nix-profile/falcon.toml"
+# "~/.nix-profile/flat_remix.toml"
+# "~/.nix-profile/flexoki.toml"
+# "~/.nix-profile/github_dark.toml"
+# "~/.nix-profile/github_dark_colorblind.toml"
+# "~/.nix-profile/github_dark_default.toml"
+# "~/.nix-profile/github_dark_dimmed.toml"
+# "~/.nix-profile/github_dark_high_contrast.toml"
+# "~/.nix-profile/github_dark_tritanopia.toml"
+# "~/.nix-profile/github_light.toml"
+# "~/.nix-profile/github_light_colorblind.toml"
+# "~/.nix-profile/github_light_default.toml"
+# "~/.nix-profile/github_light_high_contrast.toml"
+# "~/.nix-profile/github_light_tritanopia.toml"
+# "~/.nix-profile/gnome_terminal.toml"
+# "~/.nix-profile/google.toml"
+# "~/.nix-profile/gotham.toml"
+# "~/.nix-profile/gruvbox_dark.toml"
+# "~/.nix-profile/gruvbox_light.toml"
+# "~/.nix-profile/gruvbox_material.toml"
+# "~/.nix-profile/gruvbox_material_hard_dark.toml"
+# "~/.nix-profile/gruvbox_material_hard_light.toml"
+# "~/.nix-profile/gruvbox_material_medium_dark.toml"
+# "~/.nix-profile/gruvbox_material_medium_light.toml"
+# "~/.nix-profile/hardhacker.toml"
+# "~/.nix-profile/high_contrast.toml"
+# "~/.nix-profile/horizon-dark.toml"
+# "~/.nix-profile/hyper.toml"
+# "~/.nix-profile/inferno.toml"
+# "~/.nix-profile/iris.toml"
+# "~/.nix-profile/iterm.toml"
+# "~/.nix-profile/kanagawa_dragon.toml"
+# "~/.nix-profile/kanagawa_wave.toml"
+# "~/.nix-profile/konsole_linux.toml"
+# "~/.nix-profile/low_contrast.toml"
+# "~/.nix-profile/marine_dark.toml"
+# "~/.nix-profile/material_theme.toml"
+# "~/.nix-profile/material_theme_mod.toml"
+# "~/.nix-profile/meliora.toml"
+# "~/.nix-profile/midnight-haze.toml"
+# "~/.nix-profile/monokai_charcoal.toml"
+# "~/.nix-profile/monokai_pro.toml"
+# "~/.nix-profile/moonlight_ii_vscode.toml"
+# "~/.nix-profile/msx.toml"
+# "~/.nix-profile/night_owlish_light.toml"
+# "~/.nix-profile/nightfox.toml"
+# "~/.nix-profile/noctis-lux.toml"
+# "~/.nix-profile/nord.toml"
+# "~/.nix-profile/nord_light.toml"
+# "~/.nix-profile/nordic.toml"
+# "~/.nix-profile/oceanic_next.toml"
+# "~/.nix-profile/omni.toml"
+# "~/.nix-profile/one_dark.toml"
+# "~/.nix-profile/palenight.toml"
+# "~/.nix-profile/papercolor_dark.toml"
+# "~/.nix-profile/papercolor_light.toml"
+# "~/.nix-profile/papertheme.toml"
+# "~/.nix-profile/pastel_dark.toml"
+# "~/.nix-profile/pencil_dark.toml"
+# "~/.nix-profile/pencil_light.toml"
+# "~/.nix-profile/rainbow.toml"
+# "~/.nix-profile/remedy_dark.toml"
+# "~/.nix-profile/rose-pine-dawn.toml"
+# "~/.nix-profile/rose-pine-moon.toml"
+# "~/.nix-profile/rose-pine.toml"
+# "~/.nix-profile/seashells.toml"
+# "~/.nix-profile/smoooooth.toml"
+# "~/.nix-profile/snazzy.toml"
+# "~/.nix-profile/solarized_dark.toml"
+# "~/.nix-profile/solarized_light.toml"
+# "~/.nix-profile/solarized_osaka.toml"
+# "~/.nix-profile/taerminal.toml"
+# "~/.nix-profile/tango_dark.toml"
+# "~/.nix-profile/tender.toml"
+# "~/.nix-profile/terminal_app.toml"
+# "~/.nix-profile/thelovelace.toml"
+# "~/.nix-profile/tokyo-night-storm.toml"
+# "~/.nix-profile/tokyo-night.toml"
+# "~/.nix-profile/tomorrow_night.toml"
+# "~/.nix-profile/tomorrow_night_bright.toml"
+# "~/.nix-profile/ubuntu.toml"
+# "~/.nix-profile/wombat.toml"
+# "~/.nix-profile/xterm.toml"
+# "~/.nix-profile/zenburn.toml"
+]
+
 [shell]
 program = "wsl.exe"
 # args = [ "~/.nix-profile/bin/zsh", "-c ", "cd ~ && ~/.config/bin/tx" ]
@@ -14,4 +257,5 @@ bold.family = "MesloLGS Nerd Font Propo"
 italic.family = "MesloLGS Nerd Font Propo"
 bold_italic.family = "MesloLGS Nerd Font Propo"
 size = 13.0
+
 
