b393cc09-3bd1-45a1-a64d-c87ab54595ed

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,7 +80,7 @@ set-window-option -g window-status-current-style fg=blue
 set-window-option -g status-left-style fg=red
 set-window-option -g status-right-style fg=red
 set-window-option -g status-interval 5 
-# set -g status-right '#[fg=blue,bg=default,bright]#(go run ~/.config/go-sys-scipts/active-taskwarrior-tasks.go) #[fg=cyan,bg=default,bright]#(~/.config/go-sys-scipts/age.go)'
-set -g status-right '#[fg=cyan,bg=default,bright]#(~/.config/go-sys-scipts/age.go)'
+set -g status-right '#[fg=blue,bg=default,bright]#(go run ~/.config/go-sys-scipts/active-taskwarrior-tasks.go) #[fg=cyan,bg=default,bright]#(~/.config/go-sys-scipts/age.go)'
+# set -g status-right '#[fg=cyan,bg=default,bright]#(~/.config/go-sys-scipts/age.go)'
 set -g status-left-length 90
 set -g status-right-length 100
