--- a/bin/config
+++ b/bin/config
@@ -1,5 +1,8 @@
 #!/usr/bin/env zsh
 . ~/.config/zsh/function.zsh
+. ~/.config/zsh/alias.zsh
 
 selected="$(fd . ~/.config -H -t f -t l)"
-nvim "$selected" && config-sync-wsl
+nvim "$selected" -c ":lua LazyVim.pick("files")()" && config-sync-wsl
+cd ~/.config
+gpl
